<resources>
    <string name="app_name">Virtual Library Assistant</string>
    <string name="title_books">Books</string>
    <string name="title_book">Book</string>
    <string name="title_history">Details</string>
    <string name="title_request_borrow">Request Borrow</string>
    <string name="title_activity_search">Search Results</string>
    <string name="title_cancel_request">Cancel Request</string>

    <string name="message_invalid_username_password">The Library ID or password you entered is incorrect.</string>
    <string name="message_empty_books">There are no books that fall under this category.</string>
    <string name="message_confirm_borrow">Do you wish to continue with borrowing this book?</string>
    <string name="message_confirmed_borrow">Your borrow request has been posted. We will notify you of any changes in your request.</string>
    <string name="message_ask_notification">To stay informed about the status of your borrow requests, please make sure to turn on notifications in Virtual Library Assistant.</string>
    <string name="message_empty_list">You have no record of book borrowing requests.</string>
    <string name="message_not_available">Book has no available copy for borrowing at the moment. Click \"Notify Me\" to get notified when a copy becomes available.</string>
    <string name="message_confirmed_notify">We will notify you when book becomes available.</string>
    <string name="message_empty_search">No books found.</string>
    <string name="message_about">Introducing the new mobile library application for Sultan Kudarat State University - Isulan Campus! This application is designed specifically for students and faculty members to make it easier for them to access and borrow books from the university library using their mobile devices. With this application, users can easily browse through the library\'s extensive collection of books and other resources. The user-friendly interface makes it easy to search for books by author, title, or subject matter.\n\nThe Virtual Library Assistant (VLA) Mobile Application is designed with accessibility in mind, ensuring that all users can easily access and use it. In addition to its extensive collection of books, the mobile library application also provides users with access to a range of other resources. The application also sends push notifications to users to remind them about due dates and book availability.\n\nOverall, the new mobile library application for Sultan Kudarat State University - Isulan Campus is an essential tool for students and faculty members who are looking for an easy and convenient way to access the university library\'s resources. With its user-friendly interface and powerful features, this application is sure to be a hit with all users.</string>
    <string name="message_pending">You have a pending borrow request.</string>
    <string name="message_borrowed">Please return the book you borrowed before posting a new borrow request.</string>
<!--    <string name="message_limit_reached">You have reached the maximum number of books allowed to be borrowed. Please return the books you borrowed before posting a new borrow request.</string>-->
    <string name="message_limit_reached">You have reached the maximum number of books allowed to be borrowed.</string>
    <string name="message_cancelled">Your borrow request has been cancelled.</string>
    <string name="message_confirm_cancel">Do you intend to cancel your borrow request?</string>
    <string name="message_can_not_be_borrowed">Borrowing this book is not allowed.</string>

    <string name="notification_channel_id">channel_request_updates</string>
    <string name="notification_channel_name">Request Updates</string>

    <string name="menu_about">About</string>
    <string name="menu_account">Account</string>
    <string name="menu_category">Categories</string>
    <string name="menu_home">Home</string>

    <string name="text_status_pending">Pending</string>
    <string name="text_status_approved">Approved</string>
    <string name="text_status_denied">Denied</string>
    <string name="text_status_returned">Returned</string>

    <string name="text_label_username">Library ID: %1$s</string>
    <string name="text_logout">Logout</string>
    <string name="text_username">Library ID</string>
    <string name="text_password">Password</string>
    <string name="text_sign_in">Login</string>
    <string name="text_author">Author</string>
    <string name="text_category">Category</string>
    <string name="text_pages">Pages</string>
    <string name="text_language">Language</string>
    <string name="text_description">Description</string>
    <string name="text_publisher">Publisher</string>
    <string name="text_date_published">Date Published</string>
    <string name="text_borrow">Borrow</string>
    <string name="text_continue">Continue</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_ok">OK</string>
    <string name="text_no_thanks">OK</string>
    <string name="text_date_approved">Date Approved</string>
    <string name="text_date_requested">Date Requested</string>
    <string name="text_date_due">Date Due</string>
    <string name="text_pendings">Pending requests</string>
    <string name="text_to_returns">Books to return</string>
    <string name="text_all_requests">Borrow history</string>
    <string name="text_notify_me">Notify me</string>
    <string name="text_search">Search</string>
    <string name="text_search_hint">Enter keyword</string>
    <string name="text_circulation">Circulation</string>
    <string name="text_version">Version %1$s</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
</resources>
