<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/menu_main_nav">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_category"
            android:title="@string/menu_category" />

        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account"
            android:title="@string/menu_account" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info"
            android:title="@string/menu_about" />
    </group>

    <group android:id="@+id/menu_action">
        <item
            android:id="@+id/action_logout"
            android:title="@string/text_logout" />
    </group>

</menu>
