<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/nav_home"
    android:id="@+id/navigation">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.vla.sksu.app.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_category"
        android:name="com.vla.sksu.app.ui.categories.CategoryFragment"
        android:label="@string/menu_category"
        tools:layout="@layout/fragment_category" >
        <action
            android:id="@+id/action_nav_category"
            app:destination="@id/nav_category"
            app:popUpTo="@id/nav_category"
            />
        <argument
            android:name="parent"
            app:argType="com.vla.sksu.app.data.Category"
            android:defaultValue="@null"
            app:nullable="true" />
        <action
            android:id="@+id/action_nav_category_to_nav_books"
            app:destination="@id/nav_books" />
    </fragment>

    <fragment
        android:id="@+id/nav_account"
        android:name="com.vla.sksu.app.ui.account.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.vla.sksu.app.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_books"
        android:name="com.vla.sksu.app.ui.books.BookListingFragment"
        android:label="@string/title_books"
        tools:layout="@layout/fragment_book_listing" >
        <argument
            android:name="category"
            app:argType="com.vla.sksu.app.data.Category" />
    </fragment>

</navigation>