<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:cropToPadding="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/placeholder_book"
                        android:layout_gravity="center"
                        />

                    <Space
                        android:layout_width="12dp"
                        android:layout_height="12dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:text="Lorem ipsum dolor sit amet, consectetur"
                            style="@style/TextAppearance.AppCompat.Title"
                            />

                        <Space
                            android:layout_width="8dp"
                            android:layout_height="8dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/text_author"
                            style="@style/TextAppearance.AppCompat.Caption"
                            />

                        <TextView
                            android:id="@+id/author"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:text="Lorem ipsum dolor sit amet, consectetur"
                            style="@style/TextAppearance.AppCompat.Body1"
                            />

                        <Space
                            android:layout_width="8dp"
                            android:layout_height="8dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/text_category"
                            style="@style/TextAppearance.AppCompat.Caption"
                            />

                        <TextView
                            android:id="@+id/category"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:text="Lorem ipsum dolor sit amet, consectetur"
                            style="@style/TextAppearance.AppCompat.Body1"
                            />

                        <Space
                            android:layout_width="8dp"
                            android:layout_height="8dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/text_circulation"
                            style="@style/TextAppearance.AppCompat.Caption"
                            />

                        <TextView
                            android:id="@+id/circulation"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:text="Lorem ipsum dolor sit amet, consectetur"
                            style="@style/TextAppearance.AppCompat.Body1"
                            />
                    </LinearLayout>

                </LinearLayout>

                <Space
                    android:layout_width="12dp"
                    android:layout_height="12dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_description"
                        style="@style/TextAppearance.AppCompat.Caption"
                        />

                    <TextView
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="Lorem ipsum dolor sit amet, consectetur"
                        style="@style/TextAppearance.AppCompat.Body1"
                        />

                </LinearLayout>

                <Space
                    android:layout_width="8dp"
                    android:layout_height="8dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/text_language"
                            style="@style/TextAppearance.AppCompat.Caption"
                            />

                        <TextView
                            android:id="@+id/language"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:text="Lorem ipsum dolor sit amet, consectetur"
                            style="@style/TextAppearance.AppCompat.Body1"
                            />

                    </LinearLayout>

                    <Space
                        android:layout_width="8dp"
                        android:layout_height="8dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/text_pages"
                            style="@style/TextAppearance.AppCompat.Caption"
                            />

                        <TextView
                            android:id="@+id/pages"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:text="Lorem ipsum dolor sit amet, consectetur"
                            style="@style/TextAppearance.AppCompat.Body1"
                            />

                    </LinearLayout>

                </LinearLayout>

                <Space
                    android:layout_width="8dp"
                    android:layout_height="8dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/text_publisher"
                            style="@style/TextAppearance.AppCompat.Caption"
                            />

                        <TextView
                            android:id="@+id/publisher"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:text="Lorem ipsum dolor sit amet, consectetur"
                            style="@style/TextAppearance.AppCompat.Body1"
                            />

                    </LinearLayout>

                    <Space
                        android:layout_width="8dp"
                        android:layout_height="8dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/text_date_published"
                            style="@style/TextAppearance.AppCompat.Caption"
                            />

                        <TextView
                            android:id="@+id/date_published"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:text="Lorem ipsum dolor sit amet, consectetur"
                            style="@style/TextAppearance.AppCompat.Body1"
                            />

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

        </ScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_borrow"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/text_borrow"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="48dp"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        />

    <LinearLayout
        android:id="@+id/view_not_available"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="48dp"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible"
        >

        <TextView
            android:id="@+id/text_not_availabe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:text="@string/message_not_available"
            android:textColor="@color/material_orange_500"
            android:layout_marginBottom="8dp"
            style="@style/TextAppearance.AppCompat.Body1"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_notify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_notify_me"
            android:layout_gravity="bottom|center"
            android:textAllCaps="false"
            android:layout_marginBottom="48dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            />

    </LinearLayout>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:layout_gravity="center"
        android:visibility="gone"
        tools:visibility="visible"
        />

</FrameLayout>