<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:src="@drawable/text_logo"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:scaleType="centerInside"
        app:tint="@color/material_teal_50"
        />

    <TextView
        android:id="@+id/label_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/message_empty_search"
        android:visibility="gone"
        tools:visibility="visible"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:cardCornerRadius="4dp"
            app:cardUseCompatPadding="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <EditText
                    android:id="@+id/input_search"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:background="@null"
                    android:imeOptions="actionSearch"
                    android:hint="@string/text_search_hint"
                    android:importantForAutofill="no"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    />

                <ImageButton
                    android:id="@+id/button_search"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:text="@string/text_search"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/material_light_white"
                    android:src="@drawable/ic_search"
                    android:textAllCaps="false"  />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            />

    </LinearLayout>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:layout_gravity="center"
        android:visibility="gone"
        tools:visibility="visible"
        />

</FrameLayout>