<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    android:paddingTop="12dp"
    android:paddingBottom="12dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?selectableItemBackground"
    >

    <ImageView
        android:id="@+id/image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:cropToPadding="true"
        android:scaleType="centerCrop"
        android:src="@drawable/placeholder_book"
        android:layout_weight="0.25"
        android:layout_gravity="center"
        />

    <Space
        android:layout_width="12dp"
        android:layout_height="12dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0.75"
        >

        <Space
            android:layout_width="8dp"
            android:layout_height="8dp" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Lorem ipsum dolor sit amet, consectetur"
            style="@style/TextAppearance.AppCompat.Title"
            />

        <Space
            android:layout_width="8dp"
            android:layout_height="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_category"
                style="@style/TextAppearance.AppCompat.Caption"
                />

            <TextView
                android:id="@+id/category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Lorem ipsum dolor sit amet, consectetur"
                style="@style/TextAppearance.AppCompat.Body1"
                />

            <Space
                android:layout_width="8dp"
                android:layout_height="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_circulation"
                style="@style/TextAppearance.AppCompat.Caption"
                />

            <TextView
                android:id="@+id/circulation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Lorem ipsum dolor sit amet, consectetur"
                style="@style/TextAppearance.AppCompat.Body1"
                />

        </LinearLayout>

        <Space
            android:layout_width="8dp"
            android:layout_height="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_author"
                    style="@style/TextAppearance.AppCompat.Caption"
                    />

                <TextView
                    android:id="@+id/author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Lorem ipsum dolor sit amet, consectetur"
                    style="@style/TextAppearance.AppCompat.Body1"
                    />

            </LinearLayout>

            <Space
                android:layout_width="8dp"
                android:layout_height="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_publisher"
                    style="@style/TextAppearance.AppCompat.Caption"
                    />

                <TextView
                    android:id="@+id/publisher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Lorem ipsum dolor sit amet, consectetur"
                    style="@style/TextAppearance.AppCompat.Body1"
                    />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>