<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    >

    <ImageView
        android:id="@+id/image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:cropToPadding="true"
        android:scaleType="centerCrop"
        android:src="@drawable/placeholder_book"
        android:layout_weight="0.25"
        />

    <Space
        android:layout_width="12dp"
        android:layout_height="12dp" />
    
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0.75"
        >

        <TextView
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAllCaps="true"
            tools:textColor="@color/material_orange_500"
            tools:text="@string/text_status_pending"
            style="@style/TextAppearance.AppCompat.Headline"
            />

        <Space
            android:layout_width="8dp"
            android:layout_height="8dp" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Lorem ipsum dolor sit amet, consectetur"
            style="@style/TextAppearance.AppCompat.Title"
            />

        <Space
            android:layout_width="8dp"
            android:layout_height="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_date_approved"
                    style="@style/TextAppearance.AppCompat.Caption"
                    />

                <TextView
                    android:id="@+id/date_approved"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Lorem ipsum dolor sit amet, consectetur"
                    style="@style/TextAppearance.AppCompat.Body1"
                    />

            </LinearLayout>

            <Space
                android:layout_width="8dp"
                android:layout_height="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_date_requested"
                    style="@style/TextAppearance.AppCompat.Caption"
                    />

                <TextView
                    android:id="@+id/date_requested"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Lorem ipsum dolor sit amet, consectetur"
                    style="@style/TextAppearance.AppCompat.Body1"
                    />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>